# personal_manager_backend

./: .gitignore  Cargo.toml  README.md  personal_manager.db-shm  personal_manager.db-wal  test_user_endpoints.sh
src/: main.rs
src/handlers/: account.rs  auth.rs  budget.rs  category.rs  liability.rs  loan.rs  mod.rs  preference.rs  recurring_transaction.rs  savings_goal.rs  transaction.rs  user_data.rs
src/middleware/: auth.rs  mod.rs
src/models/: account.rs  budget.rs  category.rs  liability.rs  loan.rs  mod.rs  recurring_transaction.rs  savings_goal.rs  transaction.rs  user.rs  user_preference.rs
src/services/: database.rs
src/utils/: jwt.rs  mod.rs
