[package]
name = "personal_manager_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6", features = ["headers"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros"], default-features = false }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
anyhow = "1.0"
bcrypt = "0.13"
jsonwebtoken = "8.0"
env_logger = "0.10"
log = "0.4"
